--- a/style.css
+++ b/style.css
@@ -1,20 +1,25 @@
-.m2m-quote {
-    border: 1px solid #ccc;
-    padding: 20px;
-    margin-bottom: 20px;
-    background-color: #f9f9f9;
-}
-
+/* assets/css/style.css */
 .m2m-like, .m2m-dislike {
-    cursor: pointer;
-    background-color: #e9e9e9;
-    padding: 10px 15px;
-    margin-right: 10px;
+    display: inline-block;
+    margin-bottom: 10px;
 }
 
-.m2m-share-btn {
+.m2m-buttons {
+    display: flex;
+    gap: 10px;
+}
+
+.m2m-btn {
+    display: inline-block;
+    padding: 10px;
     background-color: #007bff;
     color: white;
-    padding: 10px 15px;
-    cursor: pointer;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.m2m-btn img {
+    width: 20px;
+    height: 20px;
+    margin-right: 5px;
 }
